// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton renders correctly when checked 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      checked={true}
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly when default checked 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      defaultChecked={true}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly when disabled 1`] = `
<label
  className="radioButton monday-style-radio-button-component disabled"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      defaultChecked={false}
      disabled={true}
      name=""
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly when unchecked 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      checked={false}
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with componentClassName 1`] = `
<label
  className="radioButton monday-style-radio-button-component test-classname"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with empty props 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with name 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      defaultChecked={false}
      disabled={false}
      name="radiosName"
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with text 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  <span
    className="radioLabel monday-style-radio-button-component__radio-label"
  >
    test text
  </span>
</label>
`;

exports[`RadioButton renders correctly with value 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="radioInput monday-style-radio-button-component__radio-input-container__radio-input"
      data-testid="radio-button"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value="optionValue"
    />
    <span
      className="radioControl monday-style-radio-button-component__radio-input-container__radio-control radioControlLabelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;
